--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <a href="https://weibo.com/yusangs/" title="weibo" target="_blank"><i class="remixicon-weibo-fill"></i></a>
         
         
-        <a href="http://falls.ink/index.xml" type="application/rss+xml" title="rss" target="_blank"><i class="remixicon-rss-fill"></i></a>
+<a href="http://falls.ink/about" title="About Me}" target="_blank">&nbsp;About Me</a>
       </div>
     </div>
   </div>
@@ -142,7 +142,10 @@
   
   <div class="list">
     <div class="post_content markdown">
-      <p>技术创造爱 Hello World 之前一直使用简书写写文章，石墨文档编辑，偶尔发发微博，现在心血来潮突然想建一个博客，网上粗略找了一点教程，还是觉得用Hugo来做吧。 主题随便筛选了......</p>
+      <p><blockquote>
+<p>技术创造爱</p>
+</blockquote>
+<p>之前一直使用简书写写文章，石墨文档编辑，偶尔发发微博，现在心血来潮突然想建一个博客，网上粗略找了一点教程，还是觉得用Hugo来做吧。</p>......</p>
     </div>
   </div>
   
