--- a/about/index.html
+++ b/about/index.html
@@ -10,7 +10,7 @@
         content="Falls"/>
 
   
-  <meta name="description" content="Falls( 秋小十 ) 关于我：Falls (秋小十) 十八线小县城，（目前）高三 爱好研究一些无聊的东西，写一些无聊的文章，做一个无聊的人 坚信/格言：技术能创造爱 目前有在咕咕的项"/>
+  <meta name="description" content="Falls( 秋小十 ) 关于我：Falls (秋小十) 十八线小县城，（目前）高三 爱好研究一些无聊的东西，写一些无聊的文章，做一个无聊的人  目前有在咕咕的项"/>
   
 
   
@@ -103,7 +103,6 @@
 <h3 id="关于我falls-秋小十">关于我：Falls (秋小十)</h3>
 <p>十八线小县城，（目前）高三</p>
 <p>爱好研究一些无聊的东西，写一些无聊的文章，做一个无聊的人</p>
-<p>坚信/格言：<strong>技术能创造爱</strong></p>
 <p>目前有在<del>咕咕</del>的项目:</p>
 <ul>
 <li>
