--- a/index.html
+++ b/index.html
@@ -142,7 +142,12 @@
   
   <div class="list">
     <div class="post_content markdown">
-      <p>武侠，是大人们看的童话。 感谢各位好友的意见和建议。 一开始只是疫情无聊写着玩玩 序言部分非原创，改写的。 序 很久很久以前，我有一匹马，一把剑，一坛酒。 马是好马，古人云......</p>
+      <p><blockquote>
+<p>武侠，是大人们看的童话。</p>
+</blockquote>
+<p>感谢各位好友的意见和建议。</p>
+<p>一开始只是疫情无聊写着玩玩</p>
+<p>序言部分非原创，改写的。</p>......</p>
     </div>
   </div>
   
@@ -173,7 +178,9 @@
   
   <div class="list">
     <div class="post_content markdown">
-      <p>计算机图形学是程序员的四大浪漫之一。 很久以前，大概初中的时候就想做一个游戏引擎，寻寻觅觅，用Direct2D在Windows端写了一个引擎，引擎跑起来尚可，但是......</p>
+      <p><blockquote>
+<p>计算机图形学是程序员的四大浪漫之一。</p>
+</blockquote>......</p>
     </div>
   </div>
   
