--- a/gaokao/index.html
+++ b/gaokao/index.html
@@ -1,6 +1,10 @@
 ﻿<!DOCTYPE html>
 <html lang="zh-CN">
 <head>
+<meta charset="utf-8">
+<link rel="icon" type="image/png" href="favicon.ico">
+<title>专项计划小助手</title>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=0">
     <link rel="stylesheet" href="css/mdui.css">
