--- a/gaokao/cf2.html
+++ b/gaokao/cf2.html
@@ -133,7 +133,7 @@
         <center>
           <div class="mdui-textfield">
             <input id='srk' v-model='input' style="width:70%" class="mdui-textfield-input" type="text"
-              placeholder="搜索专业或者学校 输入学校名称或者学校所在地名" />
+              placeholder="搜索学校 输入学校名称或者学校所在地名" />
           </div><button @click="handleSx" class="mdui-btn" style="background-color: #ee5973">筛选</button>
         </center>
       </div>
