--- a/gaokao/cf2.html
+++ b/gaokao/cf2.html
@@ -200,7 +200,7 @@
             }
             gxdata.sort(
               function(a,b){
-                return a.ygfs-b.ygfs;
+                return b.ygfs-a.ygfs;
               }
             );
             this.cardsdata = gxdata;
